--- a/togetdog/Dockerfile
+++ b/togetdog/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:8-jdk-alpine
-VOLUME /tmp
-ADD ./target/batch-visualizer-java-migrator-0.0.1-SNAPSHOT.jar app.jar
-ENV JAVA_OPTS=""
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
