S08P12A807-147 #done Feature:back: dummy API dependency, properties 수정

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=ssafy
 
 # db response password
 spring.datasource.password=ssafy
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
