--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
