--- a/togetdog/Dockerfile
+++ b/togetdog/Dockerfile
@@ -1,4 +1,9 @@
 FROM openjdk:8-jdk-alpine
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+WORKDIR /app
+
+COPY build/libs/*.jar application.jar
+
+EXPOSE 8080
+
+CMD ["java", "-jar", "application.jar"]
