--- a/togetdog/Dockerfile
+++ b/togetdog/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
 ARG JAR_FILE=*.jar
-COPY ${JAR_FILE} app.jar
+COPY /var/jenkins_home/workspace/spring-test/togetdog/${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
