--- a/togetdog/build.gradle
+++ b/togetdog/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
+jar {
+    enabled = false
+}
+
 group = 'com.ssafy.togetdog'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
