--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.datasource.password=ssafy
 
 # for swagger error
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # log4j2 setting
 # logging.config=classpath:log4j2.xml
