--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -15,7 +15,7 @@ RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/nginx/default.conf /etc/nginx/conf.d/default.conf
 
 RUN rm -rf /usr/share/nginx/html/*
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY /app/dist /usr/share/nginx/html
 
 EXPOSE 3000
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
