--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -12,7 +12,7 @@ RUN npm run build
 
 FROM nginx:alpine as production-build
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY /app/nginx/default.conf /etc/nginx/conf.d/default.conf
 
 RUN rm -rf /usr/share/nginx/html/*
 COPY /app/dist /usr/share/nginx/html
