--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -1,31 +1,22 @@
 FROM node:18.12.1 as build-stage 
 
-# RUN, CMD, ENTRYPOINT의 명령이 실행될 디렉터리 
-WORKDIR /app 
+# 경로 설정하기
+WORKDIR /app
+# package.json 워킹 디렉토리에 복사 (.은 설정한 워킹 디렉토리를 뜻함)
+COPY package.json .
+# 명령어 실행 (의존성 설치)
+RUN npm install
+# 현재 디렉토리의 모든 파일을 도커 컨테이너의 워킹 디렉토리에 복사한다.
+COPY . .
 
-# package*.json이 WORKDIR에 복사된다 
-COPY package*.json ./ 
+# 각각의 명령어들은 한줄 한줄씩 캐싱되어 실행된다.
+# package.json의 내용은 자주 바뀌진 않을 거지만
+# 소스 코드는 자주 바뀌는데
+# npm install과 COPY . . 를 동시에 수행하면
+# 소스 코드가 조금 달라질때도 항상 npm install을 수행해서 리소스가 낭비된다.
 
-# 복사했으니 디펜던시 설치가 가능하다 
-RUN npm install 
+# 3000번 포트 노출
+EXPOSE 3000
 
-# 소스코드를 복사한다 
-COPY ./ . 
-
-# build 해서 /dist 폴더에 빌드 파일이 생성된다. 
-RUN npm run build 
-
-# nginx 이미지를 받는다. 실행 이미지이구나 
-FROM nginx as production-stage 
-
-# app 디렉터리 생성 
-RUN mkdir /app 
-
-# builder에서 빌드한 바이너리를 실행할 이미지로 전달해주기 위해 copy --from 옵션을 사용하여 실행 이미지로 전달한다 
-COPY --from=build-stage /app/dist /app 
-
-# 작성한 nginx 설정파일을 복사한다. 
-COPY nginx.conf /etc/nginx/nginx.conf 
-
-# 변경된 설정을 잘 적용하기 위해 재시작한다. 
-RUN service nginx restart 
+# npm start 스크립트 실행
+CMD ["npm", "start"]
