--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -9,7 +9,7 @@ RUN npm install
 
 FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./default.conf /etc/nginx/conf.d/
+COPY conf /etc/nginx/
 COPY --from=build-stage ./app/build /usr/share/nginx/html/
 
 EXPOSE 3000
