--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -2,10 +2,11 @@ FROM node:18.12.1 as build-stage
 
 # 경로 설정하기
 WORKDIR /app
-# package.json 워킹 디렉토리에 복사 (.은 설정한 워킹 디렉토리를 뜻함)
-COPY package.json .
+
+COPY . .
 # 명령어 실행 (의존성 설치)
 RUN npm install
+RUN npm build
 
 FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
