--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -3,15 +3,15 @@ FROM node:18.12.1 as build-stage
 # 경로 설정하기
 WORKDIR /app
 
-COPY . .
+COPY . /app
 # 명령어 실행 (의존성 설치)
 RUN npm install
-RUN npm build
+RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
 COPY conf /etc/nginx/
-COPY --from=build-stage ./app/build /usr/share/nginx/html/
+COPY --from=build-stage /app/build /usr/share/nginx/html/
 
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
