--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -10,6 +10,8 @@ RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
+CMD ["pwd"]
+CMD ["ls-al"]
 COPY conf /etc/nginx/
 COPY --from=build-stage /app/build /usr/share/nginx/html/
 
