--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -9,10 +9,8 @@ RUN npm install
 RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
-RUN rm /etc/nginx/conf.d/default.conf
-CMD ["pwd"]
-CMD ["ls-al"]
-COPY conf /etc/nginx/
+# RUN rm /etc/nginx/conf.d/default.conf
+# COPY conf /etc/nginx/
 COPY --from=build-stage /app/build /usr/share/nginx/html/
 
 EXPOSE 3000
