--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -13,5 +13,5 @@ FROM nginx:stable-alpine as production-stage
 # COPY conf /etc/nginx/
 COPY --from=build-stage /app/build /usr/share/nginx/html/
 
-EXPOSE 3000
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
