--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -8,16 +8,13 @@ COPY package.json .
 RUN npm install
 # 현재 디렉토리의 모든 파일을 도커 컨테이너의 워킹 디렉토리에 복사한다.
 COPY . .
+RUN npm run build
 
-# 각각의 명령어들은 한줄 한줄씩 캐싱되어 실행된다.
-# package.json의 내용은 자주 바뀌진 않을 거지만
-# 소스 코드는 자주 바뀌는데
-# npm install과 COPY . . 를 동시에 수행하면
-# 소스 코드가 조금 달라질때도 항상 npm install을 수행해서 리소스가 낭비된다.
+FROM nginx
 
 # 3000번 포트 노출
 EXPOSE 3000
 
-# npm start 스크립트 실행
-CMD ["npm", "start"]
-#CMD ["nginx", "-g", "daemon off;"]
+COPY ./default.conf /etc/nginx/conf.d/default.conf 
+COPY --from=builder /app/build  /usr/share/nginx/html
+CMD ["nginx", "-g", "daemon off;"]
