--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -17,5 +17,5 @@ CMD ["npm", "start"]
 
 FROM nginx:latest
 
-COPY --from=build-stage /app/build /usr/share/nginx/html
+COPY --from=build-stage /app/build /var/www/html
 CMD ["nginx", "-g", "daemon off;"]
