--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -15,7 +15,7 @@ EXPOSE 3000
 # npm start 스크립트 실행
 CMD ["npm", "start"]
 
-FROM nginx:latest
+#FROM nginx:latest
 
-COPY --from=build-stage /app/build /var/www/html
-CMD ["nginx", "-g", "daemon off;"]
+#COPY --from=build-stage /app/build /var/www/html
+#CMD ["nginx", "-g", "daemon off;"]
