--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -1,13 +1,14 @@
 FROM node:18.12.1 as build-stage 
 
 # 경로 설정하기
+RUN mkdir /app
 WORKDIR /app
 # package.json 워킹 디렉토리에 복사 (.은 설정한 워킹 디렉토리를 뜻함)
 COPY package.json .
 # 명령어 실행 (의존성 설치)
 RUN npm install
 # 현재 디렉토리의 모든 파일을 도커 컨테이너의 워킹 디렉토리에 복사한다.
-COPY . .
+COPY . /app
 
 RUN npm run build
 # 3000번 포트 노출
@@ -22,7 +23,7 @@ RUN rm -rf /etc/nginx/conf.d
 COPY conf /etc/nginx
 
 # 위에서 생성한 앱의 빌드산출물을 nginx의 샘플 앱이 사용하던 폴더로 이동
-COPY --from=build-stage ./build /usr/share/nginx/html
+COPY --from=build-stage /app/build /usr/share/nginx/html
 
 # 80포트 오픈하고 nginx 실행
 EXPOSE 80
