--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -17,7 +17,7 @@ RUN npm run build
 # npm start 스크립트 실행
 #CMD ["npm", "start"]
 
-#FROM nginx:latest
+FROM nginx:latest
 # nginx의 기본 설정을 삭제하고 앱에서 설정한 파일을 복사
 RUN rm -rf /etc/nginx/conf.d
 COPY conf /etc/nginx
