--- a/togetdog_client/conf/default.conf
+++ b/togetdog_client/conf/default.conf
@@ -2,7 +2,7 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm index.nginx-debian.html;
 
-        server_name www.togetdog.site togetdog.site;
+        server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
 
         location  {
                 try_files $uri $uri/ /index.html;
@@ -30,7 +30,7 @@ server {
         listen 80;
         listen []80;
 
-        server_name www.togetdog.site togetdog.site;
+        server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
 
         location  {
                 try_files $uri $uri/ /index.html;
