--- a/togetdog_client/conf/default.conf
+++ b/togetdog_client/conf/default.conf
@@ -5,7 +5,8 @@ server {
         server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
 
         location  {
-                try_files $uri $uri/ /index.html;
+                proxy_pass http://127.0.0.1:3000;
+                #try_files $uri $uri/ /index.html;
         }
 
     listen []443 ssl ipv6only=on; # managed by Certbot
