--- a/togetdog_client/conf/default.conf
+++ b/togetdog_client/conf/default.conf
@@ -4,7 +4,7 @@ server {
 
         server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
 
-        location  {
+        location / {
                 #proxy_pass http://127.0.0.1:3000;
                 try_files $uri $uri/ /index.html;
         }
@@ -33,8 +33,8 @@ server {
 
         server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
 
-        location  {
-                try_files $uri $uri/ /index.html;
+        location / {
+                return 301 https://$host$request_uri;
         }
     return 404; # managed by Certbot
 }
