--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -24,6 +24,8 @@ COPY /conf/default.conf /etc/nginx
 
 # 위에서 생성한 앱의 빌드산출물을 nginx의 샘플 앱이 사용하던 폴더로 이동
 COPY --from=build-stage /app/build /usr/share/nginx/html
+RUN ls /app/build
+RUN ls /usr/share/nginx/html
 
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
