--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -1,21 +1,13 @@
 FROM node:18.12.1 as build-stage 
 
-# 경로 설정하기
-RUN mkdir /app
-WORKDIR /app
-# package.json 워킹 디렉토리에 복사 (.은 설정한 워킹 디렉토리를 뜻함)
-COPY package.json .
-# 명령어 실행 (의존성 설치)
-RUN npm install
-# 현재 디렉토리의 모든 파일을 도커 컨테이너의 워킹 디렉토리에 복사한다.
-COPY . /app
-
+RUN mkdir /usr/src/app
+WORKDIR /usr/src/app
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
+COPY package.json /usr/src/app/package.json
+RUN npm install --silent
+RUN npm install react-scripts@1.1.1 -g --silent
+COPY . /usr/src/app
 RUN npm run build
-# 3000번 포트 노출
-#EXPOSE 3000
-
-# npm start 스크립트 실행
-#CMD ["npm", "start"]
 
 FROM nginx:latest
 # nginx의 기본 설정을 삭제하고 앱에서 설정한 파일을 복사
@@ -23,9 +15,7 @@ RUN rm -rf /etc/nginx/conf.d
 COPY /conf/default.conf /etc/nginx
 
 # 위에서 생성한 앱의 빌드산출물을 nginx의 샘플 앱이 사용하던 폴더로 이동
-COPY --from=build-stage /app/build /usr/share/nginx/html
-RUN ls /app/build
-RUN ls /usr/share/nginx/html
+COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
