--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -1,11 +1,10 @@
-FROM node:18.12.1 as build-stage 
+FROM node:18.12.1 as builder
 
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 RUN npm install --silent
-RUN npm install react-scripts@1.1.1 -g --silent
 COPY . /usr/src/app
 RUN npm run build
 
