--- a/togetdog_client/conf/conf.d/default.conf
+++ b/togetdog_client/conf/conf.d/default.conf
@@ -9,32 +9,11 @@ server {
                 try_files $uri $uri/ /index.html;
         }
 
-    listen []443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/togetdog.site/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/togetdog.site/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    listen []80; # managed by Certbot
+    listen 80; # managed by Certbot
+    #ssl_certificate /etc/letsencrypt/live/togetdog.site/fullchain.pem; # managed by Certbot
+    #ssl_certificate_key /etc/letsencrypt/live/togetdog.site/privkey.pem; # managed by Certbot
+    #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    #ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-}
-server {
-    if ($host = www.togetdog.site) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = togetdog.site) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-        listen 80;
-        listen []80;
-
-        server_name www.togetdog.site togetdog.site i8a807.p.ssafy.io;
-
-        location / {
-                return 301 https://$host$request_uri;
-        }
-    return 404; # managed by Certbot
 }
