--- a/togetdog_client/conf/conf.d/default.conf
+++ b/togetdog_client/conf/conf.d/default.conf
@@ -9,8 +9,9 @@ server {
                 try_files $uri $uri/ /index.html;
         }
 
-    listen []80; # managed by Certbot
-    listen 80; # managed by Certbot
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
     #ssl_certificate /etc/letsencrypt/live/togetdog.site/fullchain.pem; # managed by Certbot
     #ssl_certificate_key /etc/letsencrypt/live/togetdog.site/privkey.pem; # managed by Certbot
     #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
