--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "react": "17.0.2",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
