--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -30,5 +30,11 @@ logging.level.com.ssafy.togetdog=debug
 # jwt secret key
 jwt.secret=SeC51aWtGJk235jGHw412agHsGQ2asdfaw25asdfaAGAS
 
-# password salt
-password.salt=u2cQlpdEslTfBuxgccaxTg==
+# Java mail sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=togetdog@gmail.com
+spring.mail.password=yircreymdnwxxqey
+#spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
