--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafy-sns?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true# db response name
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.url=jdbc:mysql://43.201.82.20:3306/togetdog?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=ppopy
+spring.datasource.password=rhdxhda807
 
 # for swagger error
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
