--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -38,3 +38,22 @@ spring.mail.password=yircreymdnwxxqey
 #spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Naver Spring Security
+#registration
+spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
+spring.security.oauth2.client.registration.naver.client-secret=yhagYvWP16
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=email,nickname
+spring.security.oauth2.client.registration.naver.client-name=ssafy
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+# Security
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
+
