--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -39,21 +39,33 @@ spring.mail.password=yircreymdnwxxqey
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Naver Spring Security
-#registration
+# security
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+# registration
+# naver
 spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
 spring.security.oauth2.client.registration.naver.client-secret=yhagYvWP16
 spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=email,nickname
-spring.security.oauth2.client.registration.naver.client-name=ssafy
+spring.security.oauth2.client.registration.naver.client-name=Naver
+# kakao
+spring.security.oauth2.client.registration.kakao.client-id=cccebd760f8c760e64903d472e58ef19
+spring.security.oauth2.client.registration.kakao.redirect-uri="http://localhost:8080/login/oauth2/code/{registrationId}"
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,gender,birthday
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+# google
+spring.security.oauth2.client.registration.google.client-id=1075413009852-5g0hlfila6rpqtjpnv06b8ispbdorb6e.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile
 
 # provider
+# naver
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-# Security
-spring.security.oauth2.client.provider.naver.user-name-attribute=response
-
-
-
+# kakao
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
