Feature-Back : social login developing and dog entity create

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -45,20 +45,22 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 # naver
 spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
 spring.security.oauth2.client.registration.naver.client-secret=yhagYvWP16
-spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=email,nickname
-spring.security.oauth2.client.registration.naver.client-name=Naver
 # kakao
-spring.security.oauth2.client.registration.kakao.client-id=cccebd760f8c760e64903d472e58ef19
-spring.security.oauth2.client.registration.kakao.redirect-uri="http://localhost:8080/login/oauth2/code/{registrationId}"
+spring.security.oauth2.client.registration.kakao.client-id=0018c14a3078270bc96ab118d3b5571a
+spring.security.oauth2.client.registration.kakao.client-secret=wKas7eenfnZjKdSnDMMMv0nLwZvCuass
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,gender,birthday
-spring.security.oauth2.client.registration.kakao.client-name=Kakao
 # google
 spring.security.oauth2.client.registration.google.client-id=1075413009852-5g0hlfila6rpqtjpnv06b8ispbdorb6e.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile
+spring.security.oauth2.client.registration.google.scope=email,.profile
 
 # provider
 # naver
@@ -69,3 +71,5 @@ spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+
+spring.jpa.open-in-view=false
