--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
+    "date-fns": "^2.29.3",
     "react": "17.0.2",
     "react-datepicker": "^4.10.0",
     "react-daum-postcode": "^3.1.1",
