--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
