--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # security
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 # registration
 # naver
 spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
@@ -56,11 +57,12 @@ spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,gender,birthday
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 # google
 spring.security.oauth2.client.registration.google.client-id=1075413009852-5g0hlfila6rpqtjpnv06b8ispbdorb6e.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,.profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.scope=email,profile
 
 # provider
 # naver
