--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -21,6 +21,7 @@
     "react-select": "^5.7.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
