--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -75,3 +75,12 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 
 spring.jpa.open-in-view=false
+
+# window
+file.path.upload-images-dogs=C:\SSAFY/image/dog
+file.path.upload-images-boards=C:\image/board
+
+#File Upload size Setting
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
