Feature-Back dog

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -77,8 +77,8 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.jpa.open-in-view=false
 
 # window
-file.path.upload-images-dogs=C:\\SSAFY\\image\\dog
-file.path.upload-images-boards=C:\\SSAFY\\image\\board
+file.path.upload-images-dogs=home\\ubuntu\\image\\dog
+file.path.upload-images-boards=home\\ubuntu\\image\\board
 
 #File Upload size Setting
 spring.servlet.multipart.max-file-size=50MB
