--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -13,13 +13,17 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
+    "date-fns": "^2.29.3",
     "react": "17.0.2",
+    "react-datepicker": "^4.10.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
