S08P12A807-255 #ing Feature:back-appointment: 산책 리스트 구현중 (어떻게 구분하지?)

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.datasource.password=rhdxhda807
 # for swagger error
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 # log4j2 setting
 # logging.config=classpath:log4j2.xml
