Feature-Back oauth application properties의 redirection url 을 고정 값으로 바꾸었습니다.

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
 spring.security.oauth2.client.registration.naver.client-secret=yhagYvWP16
 spring.security.oauth2.client.registration.naver.client-name=Naver
-spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.redirect-uri=https://i8a807.p.ssafy.io/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=email,nickname
 # kakao
@@ -59,13 +59,13 @@ spring.security.oauth2.client.registration.kakao.client-id=0018c14a3078270bc96ab
 spring.security.oauth2.client.registration.kakao.client-secret=wKas7eenfnZjKdSnDMMMv0nLwZvCuass
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
-spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://i8a807.p.ssafy.io/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 # google
 spring.security.oauth2.client.registration.google.client-id=1075413009852-5g0hlfila6rpqtjpnv06b8ispbdorb6e.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri=https://i8a807.p.ssafy.io/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 # provider
