--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -23,8 +23,10 @@
     "react-select": "^5.7.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "sockjs-client": "^1.6.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webstomp-client": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
