--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^4.10.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
