fix:back - code refactoring

--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # server port
 # server.port=8080
 
+###########################
+# DO NOT UPLOAD THIS FILE #
+###########################
+
 # DataBase Settings
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=5000
