--- a/togetdog_client/package.json
+++ b/togetdog_client/package.json
@@ -27,7 +27,8 @@
     "sockjs-client": "^1.6.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
-    "webstomp-client": "^1.2.6"
+    "webstomp-client": "^1.2.6",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
