--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -5,6 +5,8 @@ WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 RUN npm install --silent
+
+COPY /home/ubuntu/config/.env /usr/src/app/.env
 COPY . /usr/src/app
 RUN npm run build
 
