--- a/togetdog_client/dockerfile
+++ b/togetdog_client/dockerfile
@@ -6,8 +6,9 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 RUN npm install --silent
 
-COPY /home/ubuntu/config/.env /usr/src/app/.env
 COPY . /usr/src/app
+CMD ['ls', '-al']
+COPY /home/ubuntu/config/.env /usr/src/app/.env
 RUN npm run build
 
 FROM nginx:latest
