--- a/togetdog/src/main/resources/application.properties
+++ b/togetdog/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://43.201.82.20:3333/togetdog_?useSSL=true&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-spring.datasource.username=ppopy
-spring.datasource.password=rhdxhda807
+spring.datasource.url=jdbc:mysql://localhost/togetdog_?useSSL=true&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=
+spring.datasource.password=
 
 # for swagger error
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -36,13 +36,13 @@ logging.level.root=info
 logging.level.com.ssafy.togetdog=debug
 
 # jwt secret key
-jwt.secret=SeC51aWtGJk235jGHw412agHsGQ2asdfaw25asdfaAGAS
+jwt.secret=
 
 # Java mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=togetdog@gmail.com
-spring.mail.password=yircreymdnwxxqey
+spring.mail.username=
+spring.mail.password=
 #spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -52,23 +52,23 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 # registration
 # naver
-spring.security.oauth2.client.registration.naver.client-id=7fC7r9ej9wWJa4f_FEb_
-spring.security.oauth2.client.registration.naver.client-secret=yhagYvWP16
+spring.security.oauth2.client.registration.naver.client-id=
+spring.security.oauth2.client.registration.naver.client-secret=
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.redirect-uri=https://togetdog.site/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=email,nickname
 # kakao
-spring.security.oauth2.client.registration.kakao.client-id=0018c14a3078270bc96ab118d3b5571a
-spring.security.oauth2.client.registration.kakao.client-secret=wKas7eenfnZjKdSnDMMMv0nLwZvCuass
+spring.security.oauth2.client.registration.kakao.client-id=
+spring.security.oauth2.client.registration.kakao.client-secret=
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.redirect-uri=https://togetdog.site/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 # google
-spring.security.oauth2.client.registration.google.client-id=1075413009852-5g0hlfila6rpqtjpnv06b8ispbdorb6e.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.redirect-uri=https://togetdog.site/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
